--- a/index.html
+++ b/index.html
@@ -316,7 +316,6 @@
         <div class="section__head" data-anim="fade">
           <div>
             <h2 class="h2">Услуги</h2>
-            <p class="sub">Собрал в “понятные карточки”, без воды.</p>
           </div>
           <div class="seg" role="tablist" aria-label="Фильтр">
             <button class="seg__btn active" type="button" data-filter="all">Все</button>
@@ -423,7 +422,7 @@
                   data-tags="RP/fictional,Web,Auth,UI,FiveM,MySQL"
                   data-link="{VK}">
             <div class="case__media">
-              <img src="assets/shot-whitenet.png" alt="WhiteNet — скриншот" loading="lazy" />
+              <img src="https://i.ibb.co/d46zN1qk/2025-12-18-192058.png" alt="WhiteNet — скриншот" loading="lazy" />
               <div class="case__glow"></div>
               <div class="case__badge">RP</div>
             </div>
@@ -443,7 +442,7 @@
                   data-tags="RP/fictional,Marketplace,UI,Filters,FiveM,MySQL"
                   data-link="{VK}">
             <div class="case__media">
-              <img src="assets/shot-bhb.png" alt="BHB — скриншот" loading="lazy" />
+              <img src="https://i.ibb.co/Q7PYGvjm/2025-12-18-192126.png" alt="BHB — скриншот" loading="lazy" />
               <div class="case__glow"></div>
               <div class="case__badge case__badge--red">RP</div>
             </div>
@@ -463,7 +462,7 @@
                   data-tags="RP/fictional,Dashboards,Stats,UX,FiveM,MySQL"
                   data-link="{VK}">
             <div class="case__media">
-              <img src="assets/shot-drive3.png" alt="Drive3 — скриншот" loading="lazy" />
+              <img src="https://i.ibb.co/nqmB5xnk/2025-12-18-192209.png" alt="Drive3 — скриншот" loading="lazy" />
               <div class="case__glow"></div>
               <div class="case__badge case__badge--amber">RP</div>
             </div>
@@ -483,7 +482,7 @@
                   data-tags="Portal,Knowledge base,UI,Navigation,Adaptive"
                   data-link="{VK}">
             <div class="case__media">
-              <img src="assets/shot-mchs.png" alt="Сайт МЧС — скриншот" loading="lazy" />
+              <img src="https://i.ibb.co/PGgPXgSL/2025-12-18-192245.png" alt="Сайт МЧС — скриншот" loading="lazy" />
               <div class="case__glow"></div>
               <div class="case__badge case__badge--blue">UI</div>
             </div>
