--- a/index.html
+++ b/index.html
@@ -164,7 +164,14 @@
           <div class="chip surface" data-reveal data-tip="Модули, конфиги, читаемый CSS/JS, масштабирование">🧩 Перспективность</div>
           <div class="chip surface" data-reveal data-tip="Аккуратные формы, валидация, подсказки">🧷 Детали</div>
           <div class="chip surface" data-reveal data-tip="Спокойно довожу до конца и не бросаю на полпути">✅ Надёжность</div>
-        </div>
+        
+          <div class="chip surface" data-reveal data-tip="Командная работа, уважение к ролям, без лишней токсичности">🤝 Командность</div>
+          <div class="chip surface" data-reveal data-tip="Умею слушать, задавать правильные вопросы и объяснять просто">🗣️ Коммуникация</div>
+          <div class="chip surface" data-reveal data-tip="Холодная голова под дедлайнами и в спорных ситуациях">🧘 Стрессоустойчивость</div>
+          <div class="chip surface" data-reveal data-tip="Быстро вникаю в домен, регламенты и контекст (в т.ч. FiveM/DB)">🧠 Обучаемость</div>
+          <div class="chip surface" data-reveal data-tip="Бережно отношусь к данным и приватности, не выношу “внутрянку” наружу">🔒 Дискретность</div>
+          <div class="chip surface" data-reveal data-tip="Ответственность за итог: довожу до релиза и поддерживаю дальше">🎯 Ответственность</div>
+</div>
       </div>
     </section>
 
@@ -229,7 +236,7 @@
             </div>
 
             <p class="vkFootnote muted">
-              * VK — основная площадка для обновлений и связи: можно писать в ЛС или через обсуждения группы.
+              * VK — основная площадка для обновлений и связи 💬 Можно написать в ЛС или в обсуждениях группы.
             </p>
           </div>
 
