--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <span class="muted">FiveM • MySQL</span>
           </div>
 
-          <h1 class="h1" data-reveal>
+          <h1 class="h1" data-reveal class=\"t-display\">
             Делаю сайты и интерфейсы,<br/>
             которые приятно использовать —<br/>
             и удобно развивать в будущем.
