--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru" data-theme="auto">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1, viewport-fit=cover" />
   <meta name="color-scheme" content="dark light" />
   <title>Артём — Web / UI / Motion</title>
   <meta name="description" content="Дизайн и разработка адаптивных сайтов и интерфейсов. UI/UX, motion, интеграции, FiveM и MySQL." />
